# short_language_detection

./: pyproject.toml  test.py
src/: example.py  test.py
src/short_language_detection/: __init__.py  detector.py  dict_detector.py  fasttext_detector.py  main_detector.py  output_formater.py
tests/: test_language_detection.py
