[project]
name = "short-language-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jourdelune", email = "jourdelune863@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "shortlanguagedetection>=0.0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
