[project]
name = "short-language-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jourdelune", email = "jourdelune863@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "emoji>=2.14.1",
    "shortlanguagedetection>=0.0.10",
    "unicodedata2>=16.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shortlanguagedetection = { git = "https://github.com/Interaction-Bot/LanguageDetection.git" }
